...
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:paddingRight="5dp" >

            <!--content area -->
            <Button
                android:id="@+id/welcome_login"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="Log in"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/button_style_blue" />
        </RelativeLayout>
...
