...
        <View
            android:background="@color/grayColor"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip" />

        <RelativeLayout
            android:id="@+id/account_setting"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
...
            android:background="@color/grayColor"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip" />


        <Button
            android:id="@+id/logout_button"
            android:text="Log Out"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="15dp"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/button_style_white"
...
