<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_setttings_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.example.blog.controller.SellingForm">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.SearchView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:defaultQueryHint="Search Destination.."
            android:id="@+id/mSearchBar"
            ></android.support.v7.widget.SearchView>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerList"></android.support.v7.widget.RecyclerView>
    </LinearLayout>

</RelativeLayout>
